<resources>
    <string name="app_name">Kolkatadev</string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="gender">Gender</string>
    <string name="Gender" />
    <string name="Name">Name</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="Password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="elcome">Welcome</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone no</string>
    <string name="email_address">Email address</string>
    <string name="mail">Mail</string>
</resources>
