<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Sign_up">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorfont"
        android:layout_marginTop="15dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="43dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:ems="10"
            android:inputType="text"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorfont"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorfont"
        android:layout_marginTop="15dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="43dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:ems="10"
            android:inputType="text"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorfont"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorfont"
        android:layout_marginTop="15dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="43dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:ems="10"
            android:inputType="number"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorfont"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorfont"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="43dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorfont"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorfont"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="43dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Confirm_password"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorfont"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/register"
        android:layout_marginTop="42dp"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button_rounded"

        />
</androidx.appcompat.widget.LinearLayoutCompat>