<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorfont"
        android:layout_marginTop="15dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="43dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:ems="10"
        android:inputType="text"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/colorfont"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorfont"
        android:layout_marginTop="15dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="43dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:ems="10"
            android:inputType="text"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorfont"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorfont"
        android:layout_marginTop="15dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="43dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_no"
            android:ems="10"
            android:inputType="text"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorfont"
            />
    </com.google.android.material.textfield.TextInputLayout>



</androidx.appcompat.widget.LinearLayoutCompat>